--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,50 @@
-/build
 /.vscode
+
+# Object files
+*.o
+*.ko
+*.obj
+*.elf
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Libraries
+*.lib
+*.a
+*.la
+*.lo
+
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
+
+# Debug files
+*.dSYM/
+
+# Kernel specific excludes
+.*.mod
+.*.cmd
+.tmp_versions
+Module.symvers
+*.mod.*
+*.o
+*.ko
+modules.order
+*.swp
+
+.tmp_versions/*
+*.mod.*
+modules.order
+Module.symvers
