--- a/client/Makefile
+++ b/client/Makefile
@@ -1,19 +1,20 @@
 CC = gcc
 XX = g++
-CFLAGS = -Wall -O -g
+CFLAGS = -Wall -O -g -Wwrite-strings
+LIBS = -lreadline -lncurses
 TARGET = ./client
 
 %.o: %.c
-	$(CC) $(CFLAGS) -c $< -o $@
+	$(CC) $(CFLAGS) $(LIBS) -c $< -o $@
 
 %.o:%.cpp
-	$(XX) $(CFLAGS) -c $< -o $@
+	$(XX) $(CFLAGS) $(LIBS) -c $< -o $@
 
 SOURCES = $(wildcard *.c *.cpp)
 OBJS = $(patsubst %.c,%.o,$(patsubst %.cpp,%.o,$(SOURCES)))
 
 $(TARGET) : $(OBJS)
-	$(XX) $(OBJS) -o $(TARGET)
+	$(XX) $(OBJS) $(CFLAGS) $(LIBS) -o $(TARGET)
 	chmod a+x $(TARGET)
 
 clean:
